# interview-agent

./: .firebaserc  .gitignore  CLAUDE.md  README.md  chatterbox_tts.py  conversation_fastapi.py  env.local.example  modal.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tts_inference.py  vercel.json
api/: index.py
docs/: firestore.md
prompts/followups/: system.txt  user.txt
scripts/: hello.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth-guard)/: AuthGate.tsx
src/app/(marketing)/: layout.tsx
src/app/api/followups/: route.ts
src/app/api/results-chat/: route.ts
src/app/api/summarize/: route.ts
src/app/api/voice/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/[slug]/: page.tsx
src/app/dashboard/create/: page.tsx
src/app/dashboard/interview/[id]/: page.tsx
src/app/interview/: ScriptedInterviewPage.tsx  page.tsx
src/app/interview/[slug]/: loading.tsx  page.tsx
src/app/interview/[slug]/thanks/: page.tsx
src/app/interview/thanks/: page.tsx
src/app/invite/: route.ts
src/app/login/: page.tsx
src/app/signup/candidate/: page.tsx
src/app/signup/interviewer/: page.tsx
src/components/: AudioPlayer.tsx  ScriptForm.tsx  VoiceRecorder.tsx
src/hooks/: useVoiceInterview.ts
src/lib/: firebase.ts  interviewStore.ts  interviewersService.ts  types.ts  useAuth.ts
src/types/: json.d.ts
